src/tui/snapshots/control_acceso__tui__visual_tests__Historial_60x22_Brisas.snap
---
source: src/tui/visual_tests.rs
expression: volcado
---
=== texto ===
                                                            
 BRISAS CLI                        Operador de prueba · ROO 
 HISTORIAL · LÍNEA DE TIEMPO                          ··:·· 
 ────────────────────────────────────────────────────────── 
 ▶ BUSCAR · CLAVE:VALOR O TEXTO LIBRE · 0 resultados        
                                                            
 ────────────────────────────────────────────────────────── 
                                                            
                                                            
        Sin registros para los filtros seleccionados        
                                                            
 ────────────────────────────────────────────────────────── 
 No hay un registro seleccionado.                           
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
 ↑↓ Mover  PGUP/PGDN Página  F3 CLÁSICA  F5 Exportar        
 ESC Volver  F1 más  F2 Salida rápida  F7 Tema              
                                                            

=== estilos ===
"                                                            " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"BRISAS CLI" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
"                        " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"Operador de prueba · ROO" fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"HISTORIAL · LÍNEA DE TIEMPO" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
"                          " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"··:··" fg=Rgb(220, 170, 70) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"──────────────────────────────────────────────────────────" fg=Rgb(100, 120, 126) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"▶ BUSCAR · CLAVE:VALOR O TEXTO LIBRE · 0 resultados       " fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                            " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"──────────────────────────────────────────────────────────" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                            " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                            " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"       Sin registros para los filtros seleccionados       " fg=Rgb(220, 170, 70) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                            " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"──────────────────────────────────────────────────────────" fg=Rgb(100, 120, 126) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"No hay un registro seleccionado.                          " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                          " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                          " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                          " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                          " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                          " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                          " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"↑↓" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Mover  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"PGUP/PGDN" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Página  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"F3" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" CLÁSICA  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"F5" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Exportar        " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"ESC" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Volver  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"F1" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" más  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"F2" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Salida rápida  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"F7" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Tema              " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                            " fg=Rgb(220, 225, 228) bg=Black mod=NONE
