src/tui/snapshots/control_acceso__tui__visual_tests__Historial_60x22_Classic.snap
---
source: src/tui/visual_tests.rs
expression: volcado
---
=== texto ===
                                                            
 BRISAS CLI                        Operador de prueba · ROO 
 HISTORIAL · LÍNEA DE TIEMPO                          ··:·· 
 ────────────────────────────────────────────────────────── 
 ▶ BUSCAR · CLAVE:VALOR O TEXTO LIBRE · 0 resultados        
                                                            
 ────────────────────────────────────────────────────────── 
                                                            
                                                            
        Sin registros para los filtros seleccionados        
                                                            
 ────────────────────────────────────────────────────────── 
 No hay un registro seleccionado.                           
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
 ↑↓ Mover  PGUP/PGDN Página  F3 CLÁSICA  F5 Exportar        
 ESC Volver  F1 más  F2 Salida rápida  F7 Tema              
                                                            

=== estilos ===
"                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"BRISAS CLI" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
"                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"Operador de prueba · ROO" fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"HISTORIAL · LÍNEA DE TIEMPO" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
"                          " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"··:··" fg=Rgb(238, 184, 78) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"──────────────────────────────────────────────────────────" fg=Rgb(76, 119, 85) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"▶ BUSCAR · CLAVE:VALOR O TEXTO LIBRE · 0 resultados       " fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"──────────────────────────────────────────────────────────" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"       Sin registros para los filtros seleccionados       " fg=Rgb(238, 184, 78) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"──────────────────────────────────────────────────────────" fg=Rgb(76, 119, 85) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"No hay un registro seleccionado.                          " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                          " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                          " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                          " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                          " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                          " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                          " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"↑↓" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Mover  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"PGUP/PGDN" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Página  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"F3" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" CLÁSICA  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"F5" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Exportar        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"ESC" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Volver  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"F1" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" más  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"F2" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Salida rápida  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"F7" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Tema              " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
